--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "bootstrap": "^5.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "firebase": "^10.1.0",
     "negotiator": "^0.6.3",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "server-only": "^0.0.1",
     "typescript": "5.1.6"
